# turbobadger

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md  tb_config.h.in
Demo/: Application.cpp  Application.h  Demo.h  Demo01.cpp  ListWindow.cpp
Demo/Demo_01/: Demo01.cpp  Demo01.h  ListWindow.cpp  ListWindow.h  ResourceEditWindow.cpp
Demo/Demo_02/: Demo.h  Demo02.cpp  Demo02.h
Demo/Editor/: Editor.cpp  Editor.h
Demo/glfw/: AppBackendGLFW.cpp  AppBackendGLFW.h  CMakeLists.txt  port_glfw.cpp
Demo/glfw/demo01/: Demo01.cpp
Demo/resources/skin/: skin.tb.txt
Demo/resources/ui_resources/: tb_editor.tb.txt  test_02_main_window.tb.txt
Demo/sdl/: AppBackendSDL.cpp  AppBackendSDL.h  CMakeLists.txt  main.cpp  sdl_port.cpp
Demo/sdl/source/: AppBackendSDL.cpp  AppBackendSDL.h  application.cpp  application.h  main.cpp  sdl_port.cpp  sdl_port.h
Demo/sdl/source/events/: application_events.h  event.h  event_manager.h  events.h  key_events.h  mouse_events.h  window_events.h
cmake/: modules.cmake
resources/default_skin/: skin.tb.txt
resources/editor_layout/: tb_editor.tb.txt  tb_editor_layout_parameter.tb.txt  tb_editor_layout_parameters.tb.txt  tb_editor_text_field.tb.txt  tb_editor_widget.tb.txt  tb_editor_widget_outline.tb.txt  tb_editor_widget_rect.tb.txt
resources/fonts/: ChalkLine-Outline.md  OfficeJunk.md
src/tb/: CMakeLists.txt  tb_bitmap_fragment.cpp  tb_config.h  tb_dimension.cpp  tb_editfield.cpp  tb_editfield.h  tb_font_desc.h  tb_font_renderer.cpp  tb_font_renderer_tbbf.cpp  tb_image_loader_stb.cpp  tb_layout.h  tb_list.h  tb_menu_item.cpp  tb_menu_item.h  tb_menu_window.cpp  tb_menu_window.h  tb_message_window.cpp  tb_message_window.h  tb_msg.h  tb_mutliselect_dropdown.cpp  tb_mutliselect_dropdown.h  tb_node_ref_tree.cpp  tb_node_tree.cpp  tb_popup_window.cpp  tb_scroller.cpp  tb_select.cpp  tb_select.h  tb_select_item.h  tb_skin.cpp  tb_statusbar.cpp  tb_statusbar.h  tb_str.cpp  tb_str.h  tb_style_edit.cpp  tb_style_edit.h  tb_style_edit_content.cpp  tb_system_win.cpp  tb_tempbuffer.cpp  tb_types.h  tb_widgets.cpp  (+11 more)
src/tb/animation/: tb_animation.cpp  tb_animation.h
src/tb/editor/: tb_editor_layout.cpp  tb_editor_layout.h  tb_editor_layout_parameter.cpp  tb_editor_layout_parameter.h  tb_editor_layout_parameters.cpp  tb_editor_layout_parameters.h  tb_editor_text_field.cpp  tb_editor_text_field.h  tb_editor_widget.cpp  tb_editor_widget.h  tb_editor_widget_base.h  tb_editor_widget_outline.cpp  tb_editor_widget_outline.h  tb_editor_widget_rect.cpp  tb_editor_widget_rect.h
src/tb/image/: tb_image_manager.h
src/tb/parser/: tb_parser.cpp
src/tb/renderers/: tb_renderer_batcher.h  tb_renderer_gl.cpp  tb_renderer_gl.h
src/tb/tests/: tb_test.cpp  tb_test.h
src/tb/utf8/: utf8.cpp
